--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.6.2",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
